3. Bulgaria gives up it's weak claim on Dalmatia.

Changelog (v0.1.7):
1. Naples got baptised wrong. This has been fixed.
2. Daytona Accords went into effect 550 years early.
3. Branicevo and Vidin are annexed into Serbia.
4. Byzantine cores strengthened in many regions.
5. Got the god-damn Cathars out of Macedonia.
6. Byzantium weakens their annoying Trebizondi partners.

Changelog (v0.1.7a):
1. Fixed a Byzzie permanent claim in Africa.

Changelog (v0.1.7b):
1. Byzantium strengthened with Moldava, I hope?

Changelog (v0.1.8):
1. Expansion of Galinda's heartland in Prussia.
2. Poland is now tied to the huge vassal state of Hungary.

Changelog (v0.2):
1. Starting to clean up the mess that is the East. Poland is now mostly squared away, probably more border-revisions down the line.
2. Galindia, Poland and others have major border revisions in this edition.

Changelog (v0.2a):
1. Fixed some... stuff.

Changelog (v0.2.1):
1. Hedjaz is now an independent Buddhist state under Jamalid protection.
2. Major border revisions undertaken in the Middle East.

Changelog (v0.3):
1. Major changes to France and Byzantium balancing
2. More border revisions in the Middle East
3. The Russian Empire can now be formed.
4. Everyone can now convert religions freely every ten years, at the expense of some stability issues.
5. Italy and England got flag changes that are more... compatible with the canon.
6. Great Britain can be formed.
7. Further Middle Eastern border revisions.
8. Mordva has seen the light of God, to give them a fair chance at survival.
9. Trebizond is historical pals with Byzantium now; as is France with Borgonha-Franca.

Changelog (v0.3.2):
1. Changed the borders of the Holy Roman Empire.

Changelog (v0.3.3):
1. Byzantium, Ireland, Burgundy and al-Andalus no longer have shitty generic ideas.

Changelog (v0.3.4):
1. Expanded the number of princely states in the HRE to prevent IA from tanking immediately.
2. Corrected some issues with the HRE's internals.