@@ -1292,7 +1292,7 @@ MLO_ideas = {
 }
 
 
-BYZ_ideas = {
+Z98_ideas = {
 	start = {
 		advisor_cost = -0.10
 		tolerance_own = 3
@@ -1303,11 +1303,9 @@ BYZ_ideas = {
 	}
 	
 	trigger = {
-		OR = {
-			tag = BYZ
-			tag = Z98
+		tag = Z98
 	}
-	}
+	
 	free = yes
 	
 	regulations_for_mercenaries = {
@@ -2035,7 +2033,7 @@ TAU_ideas = {
 }
 
 
-GRA_ideas = {
+Z75_ideas = {
 	start = {
 		global_tax_modifier = 0.15
 		religious_unity = 0.25
