@@ -1,0 +1,6 @@
+vassal = {
+	first = EGY
+	second = Y82
+	start_date = 1444.11.11
+	end_date = 2017.08.25
+	}
