@@ -140,3 +140,33 @@
  gog_convert.105.c: "So you say I can do my sister now?"
  gog_convert.105.d: "And now, I shall turn an eye to Zion..."
  gog_convert.105.e: "I don't even know what Jainism is, but sure."
+ Z02_ideas: "Eire Ideas"
+ ei_high_king: "The High King of Ireland"
+ ei_high_king_desc: "Ireland's unique unification process and the centralized society it represents has lead to better legitimacy amongst the Irish people, and better governance as well."
+ ei_green_fortress: "The Green Fortress"
+ ei_green_fortress_desc: "Our country is one of the best to withstand an enemy invasion."
+ ei_merchants_of_dublin: "The Merchants of Dublin"
+ ei_merchants_of_dublin_desc: "Our knowledge of mercantilism and trade has created a net benefit for the people of Ireland."
+ ei_strong_central: "Central Administrative Act"
+ ei_strong_central_desc: "The King and his advisors have passed new laws to further tightly administrate the provinces and princely regions."
+ ei_living_space: "Living Space"
+ ei_living_space_desc: "The ultimate destiny of Ireland is to acquire living space for herself and Irish people. Though our efforts to expand into Britannia are largely inconsequential, rumors persist of Atlantis to our west... or Vinland. Something to that effect."
+ ei_university: "University of Tir Chonnail"
+ ei_university_desc: "The University of Tir Chonnail is often notable amongst Britain and Ireland for it's strict standards on education. This has improved our national consciousness."
+ ei_ladies_of_eire: "Irish Feminism"
+ ei_ladies_of_eire_desc: "Who is to say a woman cannot lead an Army? Let women serve!"
+ Z22_ideas: "Borgoni Ideas"
+ bf_hospital_new_jerusalem: "The Hospital of New Jerusalem"
+ bf_hospital_new_jerusalem_desc: "The Imperial Hospital in New Jerusalem has long been a bastion of medicine since the Black Death. This gives us an advantage in treating our wounded."
+ bf_albigensian_order: "The Albigensian Order"
+ bf_albigensian_order_desc: "The Albigensian Order were formed out of the members of the Knights Templar and Hospitaller who converted during the Reformation, and has become an order of merit around the Cathar world."
+ bf_estates_general: "The Estates-General"
+ bf_estates_general_desc: "With such a large nation, the monarchy has delegated taxation priviliges to an Estates-General, which has allowed for less resentment as those who are taxed, typically also perform the taxing."
+ bf_escadre_bleu: "Escadre Bleu"
+ bf_escadre_bleu_desc: "The navy of Burgundy is second to none, and shall be a fearsome force upon the waves! Tremble, Rome and Cordoba!"
+ bf_alpine_forts: "The Stuyvesant Line"
+ bf_alpine_forts_desc: "Our line of fortresses along the Alps and the Holy Roman border has long defended our heartland from invasions. Continuing to fund these forts will keep us safe from all new developing threats."
+ bf_cathar_legacy: "Legacy of the Cathar Reformation"
+ bf_cathar_legacy_desc: "The Cathar Reformation and its effects on Christendom has led to a legacy of tolerance in a nation that has seen Catholic, Cathar, and now Orthodox rulers over the last 350 years."
+ bf_toulon_docks: "The Toulon Docks"
+ bf_toulon_docks_desc: "Our prosperous ports have a large shupbuilding capacity. The Toulon Docks have become a hub of commercial and naval traffic for over two generations, and seems no sign of stopping."
